fixed mobile on safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .safari-fix {
+        transform: translate3d(0, 0, 0);
+    }
+}
